Version 5.1.8
  - Defaulting max allowed packet to 1024 to account for the possible case where the
    value doesn't come in as a server variable   
  - implemented Disposable pattern on MySqlTransaction class so including one in a using statement
    and then not calling commit will cause a rollback when the using exits (bug #39817)
  - fixed problem that caused in use connection strings to be modified when a pooled connection
    timed out and was cancelled.  (bug #40091)
  - fixed problem where using respect binary flags would not use the connection char set
    and therefore return strings with a bad encoding.
  - fixed problem with datetime formatting that causes an extra space to be included between the
    date and time when sent to the server (bug #41021)
  - fixed "metadatacollections" collection to include foreign key columns
  - fixed problem with execution of LOAD DATA LOCAL INFILE (which also affected MySqlBulkLoader).
    When the driver encountered some type of error opening the local file for transport it would
    still attempt to close the file which would yield a null reference exception (bug #43332)      
  - fixed index and index column schema collections that would fail if you specified the
    any restrictions more specific than table name (bug #43991)
  - fixed potential endless loop in CompressedStream in case where end of stream occurs before 
    packet is fully read (bug #43678)
  - fixed ReservedWords schema collection to not incorrectly include blank words and to use the
    right column name
  
Version 5.1.7 - 8/20/08
 - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
   4.1 servers (bug #30603)
 - Fixed problem with pooling code where connections pooled from the pool were added
   twice to the in use pool.  This would cause a semaphore full exception
   when an attempt is made to release them back to the pool (bug #36688)